@@ -1,8 +1,18 @@
+2007-12-28  Ville Vainio  <vivainio@gmail.com>
+
+	* ipy_server.py: TCP socket server for "remote control" of an IPython 
+	instance.
+
 2007-12-28  Fernando Perez  <Fernando.Perez@colorado.edu>
 
 	* IPython/dtutils.py: Add utilities for interactively running
 	doctests.  Still needs work to more easily handle the namespace of
 	the package one may be working on, but the basics are in place.
+
+2007-12-27  Ville Vainio  <vivainio@gmail.com>
+
+	* ipy_completers.py: Applied arno's patch to get proper list of 
+	packages in import completer. Closes #196.
 
 2007-12-20  Ville Vainio  <vivainio@gmail.com>
 
